--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+						<h5 class="modal-title" id="exampleModalLabel">Information</h5>
 						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 					</div>
 					<form method="POST">
@@ -39,7 +39,7 @@
 								<label for="role" class="form-label">Role</label>
 								<input type="text" name="role" id="role" class="form-control" id="role" aria-describedby="roleHelp">
 							</div>
-      `					</div>
+       				</div>
 					</form>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-primary">UPDATE</button>
@@ -47,7 +47,7 @@
 				</div>
 			</div>
 		</div>
-	`	<div class="container">
+		<div class="container">
 			<h1>Employee Table</h1>
 			<table class="table table-bordered">
 				<tr class="header">
